<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="enf.course.project.myday.TaskViewPop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@color/shadow_dark"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/time_sample"
            android:id="@+id/details_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="@string/title_sample"
            android:textStyle="bold"
            android:textColor="@color/shadow_dark"
            android:id="@+id/details_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:textStyle="normal"
            android:textSize="18sp"
            android:text="@string/description_sample"
            android:id="@+id/detail_description"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pink_text"
                    android:textSize="18sp"
                    android:text="@string/send_message_description"
                    android:id="@+id/send_message"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/deep_green"
                    android:textSize="20sp"
                    android:text="@string/mark_done"
                    android:id="@+id/done_text_pop"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
